主页面，修改了 异步输送线

--- a/smtcl_erp/WebRoot/html/h_home.html
+++ b/smtcl_erp/WebRoot/html/h_home.html
@@ -63,19 +63,8 @@
 			</style>
 			<form id="home_form" class="row">
 				<div class="col-md-7" style="width:850px;">
-					<div class="row">
-						<div class="col-md-2"></div>
-						<div class="col-md-1 dianxin">电芯输送线</div>
-						<div class="col-md-4" style="width:300px;">
-							<div class="right_lan" id="top_dianxin1" style="float:left;"></div>
-							<div class="right_hui" id="top_dianxin2" style="float:left;"></div>
-							<div class="right_hui" id="top_dianxin3" style="float:left;"></div>
-							<div class="right_hui" id="top_dianxin4" style="float:left;"></div>
-							<div class="right_hui" id="top_dianxin5" style="float:left;"></div>
-						</div>
-					</div>
 					<div class="row" style="margin-top:7px;width:850px;">
-							<div class="head_hui" style="float:left;">前升降机</div>
+							<div class="head_hui" style="float:left;">异步输送线</div>
 							<div class="right_hui" id="top_1ST" style="float:left;">1ST</div>
 							<div class="right_hui" id="top_2ST" style="float:left;">2ST</div>
 							<div class="right_lan" id="top_3ST" style="float:left;">3ST</div>
@@ -89,7 +78,7 @@
 							<div class="right_hui" id="top_11ST" style="float:left;">11ST</div>
 							<div class="right_lan" id="top_12ST" style="float:left;">12ST</div>
 							<div class="right_lan" id="top_13ST" style="float:left;">13ST</div>
-							<div class="head_hui" style="float:left;">后升降机</div>
+							<div class="head_hui" style="float:left;">异步输送线</div>
 					</div>
 					<div class="row" style="margin-top:10px;width:850px;">
 						<div class="col-md-1 shusongxian">输送线</div>
@@ -183,7 +172,7 @@
 						</div>
 					</div>
 					<div class="row" style="margin-top:10px;width:850px;">
-							<div class="head_hui" style="float:left;">前升降机</div>
+							<div class="head_hui" style="float:left;">异步输送线</div>
 							<div class="right_hui" style="float:left;">1ST</div>
 							<div class="right_hui" style="float:left;">2ST</div>
 							<div class="right_lan" style="float:left;">3ST</div>
@@ -197,18 +186,7 @@
 							<div class="right_lan" style="float:left;">11ST</div>
 							<div class="right_lan" style="float:left;">12ST</div>
 							<div class="right_lan" style="float:left;">13ST</div>
-							<div class="head_hui" style="float:left;">后升降机</div>
-					</div>
-					<div class="row" style="margin-top:10px;">
-						<div class="col-md-2"></div>
-						<div class="col-md-1 dianxin">电芯输送线</div>
-						<div class="col-md-4" style="width:300px;">
-							<div class="right_hui" style="float:left;"></div>
-							<div class="right_lan" style="float:left;"></div>
-							<div class="right_hui" style="float:left;"></div>
-							<div class="right_hui" style="float:left;"></div>
-							<div class="right_lan" style="float:left;"></div>
-						</div>
+							<div class="head_hui" style="float:left;">异步输送线</div>
 					</div>
 				</div>
 				<div class="col-md-5" style="height:85%;">
