--- a/smtcl_erp/WebRoot/html/h_home.html
+++ b/smtcl_erp/WebRoot/html/h_home.html
@@ -189,7 +189,7 @@
 							<div class="head_hui" style="float:left;">异步输送线</div>
 					</div>
 				</div>
-				<div class="col-md-5" style="height:85%;">
+				<div class="col-md-5" style="height:85%;margin-top:-20px;">
 					<div class="row">
 						<div class="col-md-6">
 							<div id="container-speed" style="width:300px;height:160px;"></div>
