--- a/smtcl_erp/WebRoot/html/h_home.html
+++ b/smtcl_erp/WebRoot/html/h_home.html
@@ -40,7 +40,7 @@
 					font-size:15px;
 					border:1px solid rgb( 234 , 234 , 234 );
 				}
-				.right_hui{
+				.hui{
 					text-align: center;
 					margin-left:3px;
 					line-height:40px;
@@ -50,7 +50,7 @@
 					font-size:15px;
 					background-color:rgb( 234 , 234 , 234 );
 				}
-				.right_lan{
+				.lan{
 					text-align: center;
 					margin-left:3px;
 					line-height:40px;
@@ -62,44 +62,44 @@
 				}
 			</style>
 			<form id="home_form" class="row">
-				<div class="col-md-7" style="width:850px;">
+				<div class="col-md-7" style="width:850px;margin-top:20px;">
 					<div class="row" style="margin-top:7px;width:850px;">
-							<div class="head_hui" style="float:left;">异步输送线</div>
-							<div class="right_hui" id="top_1ST" style="float:left;">1ST</div>
-							<div class="right_hui" id="top_2ST" style="float:left;">2ST</div>
-							<div class="right_lan" id="top_3ST" style="float:left;">3ST</div>
-							<div class="right_hui" id="top_4ST" style="float:left;">4ST</div>
-							<div class="right_hui" id="top_5ST" style="float:left;">5ST</div>
-							<div class="right_lan" id="top_6ST" style="float:left;">6ST</div>
-							<div class="right_lan" id="top_7ST" style="float:left;">7ST</div>
-							<div class="right_hui" id="top_8ST" style="float:left;">8ST</div>
-							<div class="right_lan" id="top_9ST" style="float:left;">9ST</div>
-							<div class="right_lan" id="top_10ST" style="float:left;">10ST</div>
-							<div class="right_hui" id="top_11ST" style="float:left;">11ST</div>
-							<div class="right_lan" id="top_12ST" style="float:left;">12ST</div>
-							<div class="right_lan" id="top_13ST" style="float:left;">13ST</div>
-							<div class="head_hui" style="float:left;">异步输送线</div>
+							<div class="head_hui no" style="float:left;">异步输送线</div>
+							<div class="hui no no" id="TOP-1ST" style="float:left;">1ST</div>
+							<div class="hui no no" id="TOP-2ST" style="float:left;">2ST</div>
+							<div class="hui no no" id="TOP-3ST" style="float:left;">3ST</div>
+							<div class="hui no" id="TOP-4ST" style="float:left;">4ST</div>
+							<div class="hui no" id="TOP-5ST" style="float:left;">5ST</div>
+							<div class="hui no" id="TOP-6ST" style="float:left;">6ST</div>
+							<div class="hui no" id="TOP-7ST" style="float:left;">7ST</div>
+							<div class="hui no" id="TOP-8ST" style="float:left;">8ST</div>
+							<div class="hui no" id="TOP-9ST" style="float:left;">9ST</div>
+							<div class="hui no" id="TOP-10ST" style="float:left;">10ST</div>
+							<div class="hui no" id="TOP-11ST" style="float:left;">11ST</div>
+							<div class="hui no" id="TOP-12ST" style="float:left;">12ST</div>
+							<div class="hui no" id="TOP-13ST" style="float:left;">13ST</div>
+							<div class="head_hui no" style="float:left;">异步输送线</div>
 					</div>
 					<div class="row" style="margin-top:10px;width:850px;">
 						<div class="col-md-1 shusongxian">输送线</div>
 						<div class="col-md-5" style="width:400px;">
 							<div class="row">
-								<div class="right_hui" id="top_502" style="float:left;">502</div>
-								<div class="right_hui" id="top_504" style="float:left;">504</div>
-								<div class="right_lan" id="top_506" style="float:left;">506</div>
-								<div class="right_lan" id="top_508" style="float:left;">508</div>
-								<div class="right_lan" id="top_510" style="float:left;">510</div>
-								<div class="right_hui" id="top_512" style="float:left;">512</div>
-								<div class="right_lan" id="top_514" style="float:left;">514</div>
+								<div class="hui no" id="502" style="float:left;">502</div>
+								<div class="hui no" id="504" style="float:left;">504</div>
+								<div class="hui no" id="506" style="float:left;">506</div>
+								<div class="hui no" id="508" style="float:left;">508</div>
+								<div class="hui no" id="510" style="float:left;">510</div>
+								<div class="hui no" id="512" style="float:left;">512</div>
+								<div class="hui no" id="514" style="float:left;">514</div>
 							</div>
 							<div class="row" style="margin-top:2px;">
-								<div class="right_hui" id="top_501" style="float:left;">501</div>
-								<div class="right_hui" id="top_503" style="float:left;">503</div>
-								<div class="right_lan" id="top_505" style="float:left;">505</div>
-								<div class="right_hui" id="top_507" style="float:left;">507</div>
-								<div class="right_lan" id="top_509" style="float:left;">509</div>
-								<div class="right_lan" id="top_511" style="float:left;">511</div>
-								<div class="right_lan" id="top_513" style="float:left;">513</div>
+								<div class="lan yes" id="501" style="float:left;">501</div>
+								<div class="hui no" id="503" style="float:left;">503</div>
+								<div class="hui no" id="505" style="float:left;">505</div>
+								<div class="hui no" id="507" style="float:left;">507</div>
+								<div class="hui no" id="509" style="float:left;">509</div>
+								<div class="hui no" id="511" style="float:left;">511</div>
+								<div class="hui no" id="513" style="float:left;">513</div>
 							</div>
 						</div>
 					</div>
@@ -107,44 +107,44 @@
 						<div class="col-md-1 huancunku">缓存库</div>
 						<div class="col-md-5" style="width:450px;">
 							<div class="row">
-								<div class="right_hui" style="float:left;">22</div>
-								<div class="right_hui" style="float:left;">23</div>
-								<div class="right_lan" style="float:left;">24</div>
-								<div class="right_lan" style="float:left;">25</div>
-								<div class="right_hui" style="float:left;">26</div>
-								<div class="right_hui" style="float:left;">27</div>
-								<div class="right_lan" style="float:left;">28</div>
-								<div class="head_hui" style="float:left;line-height:40px;">第四层</div>
+								<div class="hui no" id="22" style="float:left;">22</div>
+								<div class="hui no" id="23" style="float:left;">23</div>
+								<div class="hui no" id="24" style="float:left;">24</div>
+								<div class="hui no" id="25" style="float:left;">25</div>
+								<div class="hui no" id="26" style="float:left;">26</div>
+								<div class="hui no" id="27" style="float:left;">27</div>
+								<div class="hui no" id="28" style="float:left;">28</div>
+								<div class="head_hui no" style="float:left;line-height:40px;">第四层</div>
 							</div>
 							<div class="row" style="margin-top:2px;">
-								<div class="right_hui" style="float:left;">15</div>
-								<div class="right_hui" style="float:left;">16</div>
-								<div class="right_lan" style="float:left;">17</div>
-								<div class="right_lan" style="float:left;">18</div>
-								<div class="right_hui" style="float:left;">19</div>
-								<div class="right_lan" style="float:left;">20</div>
-								<div class="right_lan" style="float:left;">21</div>
-								<div class="head_hui" style="float:left;line-height:40px;">第三层</div>
+								<div class="hui no" id="15" style="float:left;">15</div>
+								<div class="hui no" id="16" style="float:left;">16</div>
+								<div class="hui no" id="17" style="float:left;">17</div>
+								<div class="hui no" id="18" style="float:left;">18</div>
+								<div class="hui no" id="19" style="float:left;">19</div>
+								<div class="hui no" id="20" style="float:left;">20</div>
+								<div class="hui no" id="21" style="float:left;">21</div>
+								<div class="head_hui no" style="float:left;line-height:40px;">第三层</div>
 							</div>
 							<div class="row" style="margin-top:2px;">
-								<div class="right_hui" style="float:left;">8</div>
-								<div class="right_hui" style="float:left;">9</div>
-								<div class="right_lan" style="float:left;">10</div>
-								<div class="right_hui" style="float:left;">11</div>
-								<div class="right_lan" style="float:left;">12</div>
-								<div class="right_hui" style="float:left;">13</div>
-								<div class="right_lan" style="float:left;">14</div>
-								<div class="head_hui" style="float:left;line-height:40px;">第二层</div>
+								<div class="hui no" id="8" style="float:left;">8</div>
+								<div class="hui no" id="9" style="float:left;">9</div>
+								<div class="hui no" id="10" style="float:left;">10</div>
+								<div class="hui no" id="11" style="float:left;">11</div>
+								<div class="hui no" id="12" style="float:left;">12</div>
+								<div class="hui no" id="13" style="float:left;">13</div>
+								<div class="hui no" id="14" style="float:left;">14</div>
+								<div class="head_hui no" style="float:left;line-height:40px;">第二层</div>
 							</div>
 							<div class="row" style="margin-top:2px;">
-								<div class="right_hui" style="float:left;">1</div>
-								<div class="right_hui" style="float:left;">2</div>
-								<div class="right_lan" style="float:left;">3</div>
-								<div class="right_lan" style="float:left;">4</div>
-								<div class="right_hui" style="float:left;">5</div>
-								<div class="right_hui" style="float:left;">6</div>
-								<div class="right_hui" style="float:left;">7</div>
-								<div class="head_hui" style="float:left;line-height:40px;">第一层</div>
+								<div class="hui no" id="1" style="float:left;">1</div>
+								<div class="hui no" id="2" style="float:left;">2</div>
+								<div class="lan yes" id="3" style="float:left;">3</div>
+								<div class="hui no" id="4" style="float:left;">4</div>
+								<div class="hui no" id="5" style="float:left;">5</div>
+								<div class="hui no" id="6" style="float:left;">6</div>
+								<div class="hui no" id="7" style="float:left;">7</div>
+								<div class="head_hui no" style="float:left;line-height:40px;">第一层</div>
 							</div>
 						</div>
 					</div>
@@ -152,44 +152,44 @@
 						<div class="col-md-1 shusongxian">输送线</div>
 						<div class="col-md-5" style="width:400px;">
 							<div class="row">
-								<div class="right_hui" style="float:left;">602</div>
-								<div class="right_hui" style="float:left;">604</div>
-								<div class="right_lan" style="float:left;">606</div>
-								<div class="right_hui" style="float:left;">608</div>
-								<div class="right_lan" style="float:left;">610</div>
-								<div class="right_lan" style="float:left;">612</div>
-								<div class="right_hui" style="float:left;">614</div>
+								<div class="lan yes" id="602" style="float:left;">602</div>
+								<div class="hui no" id="604" style="float:left;">604</div>
+								<div class="hui no" id="606" style="float:left;">606</div>
+								<div class="hui no" id="608" style="float:left;">608</div>
+								<div class="hui no" id="610" style="float:left;">610</div>
+								<div class="hui no" id="612" style="float:left;">612</div>
+								<div class="hui no" id="614" style="float:left;">614</div>
 							</div>
 							<div class="row" style="margin-top:2px;">
-								<div class="right_hui" style="float:left;">601</div>
-								<div class="right_lan" style="float:left;">603</div>
-								<div class="right_hui" style="float:left;">605</div>
-								<div class="right_lan" style="float:left;">607</div>
-								<div class="right_hui" style="float:left;">609</div>
-								<div class="right_lan" style="float:left;">611</div>
-								<div class="right_lan" style="float:left;">613</div>
+								<div class="lan yes" id="601" style="float:left;">601</div>
+								<div class="lan yes" id="603" style="float:left;">603</div>
+								<div class="lan yes" id="605" style="float:left;">605</div>
+								<div class="hui no" id="607" style="float:left;">607</div>
+								<div class="hui no" id="609" style="float:left;">609</div>
+								<div class="hui no" id="611" style="float:left;">611</div>
+								<div class="hui no" id="613" style="float:left;">613</div>
 							</div>
 						</div>
 					</div>
 					<div class="row" style="margin-top:10px;width:850px;">
-							<div class="head_hui" style="float:left;">异步输送线</div>
-							<div class="right_hui" style="float:left;">1ST</div>
-							<div class="right_hui" style="float:left;">2ST</div>
-							<div class="right_lan" style="float:left;">3ST</div>
-							<div class="right_hui" style="float:left;">4ST</div>
-							<div class="right_lan" style="float:left;">5ST</div>
-							<div class="right_hui" style="float:left;">6ST</div>
-							<div class="right_hui" style="float:left;">7ST</div>
-							<div class="right_lan" style="float:left;">8ST</div>
-							<div class="right_lan" style="float:left;">9ST</div>
-							<div class="right_hui" style="float:left;">10ST</div>
-							<div class="right_lan" style="float:left;">11ST</div>
-							<div class="right_lan" style="float:left;">12ST</div>
-							<div class="right_lan" style="float:left;">13ST</div>
-							<div class="head_hui" style="float:left;">异步输送线</div>
+							<div class="head_hui no" style="float:left;">异步输送线</div>
+							<div class="hui no" id="BOTTOM-1ST" style="float:left;">1ST</div>
+							<div class="hui no" id="BOTTOM-2ST" style="float:left;">2ST</div>
+							<div class="hui no" id="BOTTOM-3ST" style="float:left;">3ST</div>
+							<div class="hui no" id="BOTTOM-4ST" style="float:left;">4ST</div>
+							<div class="hui no" id="BOTTOM-5ST" style="float:left;">5ST</div>
+							<div class="hui no" id="BOTTOM-6ST" style="float:left;">6ST</div>
+							<div class="hui no" id="BOTTOM-7ST" style="float:left;">7ST</div>
+							<div class="hui no" id="BOTTOM-8ST" style="float:left;">8ST</div>
+							<div class="hui no" id="BOTTOM-9ST" style="float:left;">9ST</div>
+							<div class="hui no" id="BOTTOM-10ST" style="float:left;">10ST</div>
+							<div class="hui no" id="BOTTOM-11ST" style="float:left;">11ST</div>
+							<div class="hui no" id="BOTTOM-12ST" style="float:left;">12ST</div>
+							<div class="hui no" id="BOTTOM-13ST" style="float:left;">13ST</div>
+							<div class="head_hui no" style="float:left;">异步输送线</div>
 					</div>
 				</div>
-				<div class="col-md-5" style="height:85%;margin-top:-20px;">
+				<div class="col-md-5" style="height:85%;">
 					<div class="row">
 						<div class="col-md-6">
 							<div id="container-speed" style="width:300px;height:160px;"></div>
@@ -200,6 +200,7 @@
 					</div>
 					<div class="row" style="margin-left:4px;">
 						搬运机构指定队列
+						<input type="button" id="bbbb" value="aaaaa"></input>
 						<div style="padding-right:17px;">
 							<table class="table table-bordered" style="width:100%;">
 					           <thead>
