--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -570,15 +570,15 @@
 	<div class="col-md-3" style="width:400px;"></div>
 	<div class="col-md-2">
 		<a class="button button-3d button-primary button-rounded" 
-			style="position:absolute;top:12px;font-family:'微软雅黑';" onclick="show_wuliao();">物料维护</a>
+			style="position:absolute;top:12px;font-family:'微软雅黑';" onclick="readyShow.show_wuliao();">物料维护</a>
 	</div>
 	<div class="col-md-2">
 		<a class="button button-3d button-primary button-rounded" 
-			style="position:absolute;top:12px;font-family:'微软雅黑';" onclick="show_mozu();">模组维护</a>
+			style="position:absolute;top:12px;font-family:'微软雅黑';" onclick="readyShow.show_mozu();">模组维护</a>
 	</div>
 	<div class="col-md-2">
 		<a class="button button-3d button-primary button-rounded" 
-			style="position:absolute;top:12px;font-family:'微软雅黑';" onclick="show_pack();">PACK维护</a>
+			style="position:absolute;top:12px;font-family:'微软雅黑';" onclick="readyShow.show_pack();">PACK维护</a>
 	</div>
 	<script type="text/javascript" src="/smtcl_erp/html/js/jcsj.js"></script>
 </body>
