--- a/smtcl_erp/WebRoot/html/h_home.html
+++ b/smtcl_erp/WebRoot/html/h_home.html
@@ -66,6 +66,7 @@
 			</style>
 			<form id="home_form" class="row">
 				<div class="col-md-7" style="width:850px;margin-top:20px;">
+					<input type="button" value="测试按钮" id="csan" />
 					<div class="row" style="margin-top:7px;width:850px;">
 							<div class="head_hui no" id="TOP-0ST">异步输送线</div>
 							<div class="hui no" id="TOP-1ST" style="float:left;">1ST</div>
