--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -9,6 +9,66 @@
 		<!-- 物料 -->
 		<div id="wuliao" class="row">
 			<form id="wl_form">
+				<style>
+					.shusongxian{
+						margin-left:3px;
+						width:50px;
+						line-height:26px;
+						font-size:15px;
+						border:1px solid rgb( 234 , 234 , 234 );
+					}
+					.huancunku{
+						margin-left:3px;
+						width:50px;
+						line-height:54px;
+						font-size:15px;
+						border:1px solid rgb( 234 , 234 , 234 );
+					}
+					.head_hui{
+						text-align: center;
+						float:left;
+						margin-left:3px;
+						height:40px;
+						width:50px;
+						color:#000000;
+						font-size:15px;
+						border:1px solid rgb( 234 , 234 , 234 );
+					}
+					.head_lan{
+						text-align: center;
+						margin-left:3px;
+						height:40px;
+						width:50px;
+						float:left;
+						color:#ffffff;
+						font-size:15px;
+						background-color:rgb( 75 , 176 , 249 );
+					}
+					.hui{
+						text-align: center;
+						margin-left:3px;
+						line-height:40px;
+						height:40px;
+						width:50px;
+						float:left;
+						cursor:pointer;
+						color:#000000;
+						font-size:15px;
+						background-color:rgb( 234 , 234 , 234 );
+					}
+					.lan{
+						text-align: center;
+						margin-left:3px;
+						line-height:40px;
+						height:40px;
+						width:50px;
+						float:left;
+						cursor:pointer;
+						color:#ffffff;
+						font-size:15px;
+						background-color:rgb( 75 , 176 , 249 );
+					}
+				</style>
 				<div class="row">
 			        <div class="col-md-1"></div>
 					<div class="col-md-10 account-company-auth" style="height:60px;width:80%;margin-left:38px;min-height:150px; margin-top:-40px;">
@@ -92,12 +152,11 @@
 					            <div class="col-md-3">
 					                <div class="cus-select" id="leibie_name">
 		                                <div class="cus-select-btn"></div>
-		                                <input id="leibie_id" type="text" placeholder="--请选择--" readonly/>
+		                                <input id="leibie_id" type="text" value="配方" readonly/>
 		                                <ul>
-		                                	<li></li>
-		                                	<li>一</li>
-		                                	<li>二</li>
-		                                	<li>三</li>
+		                                	<li>配方</li>
+		                                	<li>模组</li>
+		                                	<li>PACK</li>
 		                                </ul>
 		                            </div>
 					            </div>
@@ -113,9 +172,9 @@
 		                                <input id="leixing_id" type="text" placeholder="--请选择--" readonly/>
 		                                <ul>
 		                                	<li></li>
-		                                	<li>一</li>
-		                                	<li>二</li>
-		                                	<li>三</li>
+		                                	<li>1</li>
+		                                	<li>2</li>
+		                                	<li>3</li>
 		                                </ul>
 		                            </div>
 					            </div>
@@ -143,9 +202,6 @@
 		                                <input id="tuopanleibie_id" placeholder="--请选择--" type="text" readonly/>
 		                                <ul>
 		                                	<li></li>
-		                                	<li>一</li>
-		                                	<li>二</li>
-		                                	<li>三</li>
 		                                </ul>
 		                            </div>
 					            </div>
@@ -177,13 +233,23 @@
 					                <span>默认上货区:</span>
 					            </div>
 					            <div class="col-md-3">
-					                <input id="shanghuoqu_id" type="text" class="form-control"/>
+					           		<div class="input-group">
+						                <input id="shanghuoqu_id" type="text" readonly="readonly" class="form-control"/>
+						                <span class="input-group-btn">
+									        <button class="btn btn-default" id="top_button" type="button">选择货位</button>
+								   		</span>
+							   		</div>
 					            </div>
 					            <div class="col-md-1 text-right" style="padding: 5px 0 0 0;">
 					                <span>默认下货区:</span>
 					            </div>
 					            <div class="col-md-3">
-					                <input id="xiahuoqu_id" type="text" class="form-control"/>
+					           		<div class="input-group">
+					               		<input id="xiahuoqu_id" type="text" readonly="readonly" class="form-control"/>
+						                <span class="input-group-btn">
+									        <button class="btn btn-default" id="bottom_button" type="button">选择货位</button>
+								   		</span>
+							   		</div>
 					            </div>
 				            </div>
 			            </div>
